# kolibri

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.en.md  README.md
.github/workflows/: bindings.yml  python-release.yml  rust.yml
docs/: json-binary-asymmetry.md
kolibri-dart/: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
kolibri-dart/android/: build.gradle  settings.gradle
kolibri-dart/android/src/main/: AndroidManifest.xml
kolibri-dart/example/: README.md  call.dart  example.dart  fingerprint.dart  handshake.dart  upload.dart
kolibri-dart/ios/: kolibri.podspec
kolibri-dart/lib/: kolibri.dart
kolibri-dart/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
kolibri-dart/lib/src/rust/api/: calls.dart  session.dart  session.freezed.dart
kolibri-dart/linux/: CMakeLists.txt
kolibri-dart/macos/: kolibri.podspec
kolibri-dart/rust/: Cargo.toml
kolibri-dart/rust/src/: frb_generated.rs
kolibri-dart/rust/src/api/: calls.rs  mod.rs  session.rs  tls.rs
kolibri-dart/windows/: CMakeLists.txt
kolibri-go/: README.md  go.mod  kolibri.go  kolibri.h  kolibri_calls.go
kolibri-go/example/handshake/: main.go
kolibri-go/rust/: Cargo.toml
kolibri-go/rust/src/: lib.rs
kolibri-kotlin/: README.md  build-rust.sh  build.gradle.kts  settings.gradle.kts
kolibri-kotlin/example/: build.gradle.kts
kolibri-kotlin/example/src/main/kotlin/ru/kolibri/example/: Handshake.kt
kolibri-kotlin/rust/: Cargo.toml
kolibri-kotlin/rust/src/: lib.rs
kolibri-net/: Cargo.toml  README.md
kolibri-net/examples/: auth_request.rs  auth_verify.rs  handshake.rs  mincifry_probe.rs
kolibri-net/src/: auth.rs  lib.rs
kolibri-net/src/calls/: events.rs  mod.rs  signaling.rs  vcp.rs
kolibri-net/src/media/: http.rs  mod.rs  upload.rs
kolibri-net/src/protocol/: codec.rs  compress.rs  framing.rs  json.rs  mod.rs  opcodes.rs  packet.rs
kolibri-net/src/session/: config.rs  manager.rs  mod.rs
kolibri-net/src/transport/: client.rs  dispatcher.rs  error.rs  mincifry_ca.pem  mod.rs  proxy.rs  tls.rs  wiretap.rs
kolibri-net/tests/: calls.rs  media.rs  session.rs  transport.rs  vectors.rs
kolibri-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
kolibri-py/examples/: auth.py  auth_async.py  auth_spoofed.py  auth_spoofed_async.py  call_bot.py  call_bot_async.py  device_presets.py  handshake.py  handshake_async.py  mincifry_ca.py  minimal.py  minimal_async.py
kolibri-py/src/: lib.rs
kolibri-swift/: Package.swift  README.md  build-rust.sh  build-xcframework.sh
kolibri-swift/Examples/: handshake.swift
kolibri-swift/Sources/Kolibri/: Auth.swift  Calls.swift  Config.swift  Session.swift  Support.swift
kolibri-swift/Tests/KolibriTests/: KolibriTests.swift
kolibri-swift/module/: module.modulemap
kolibri-swift/rust/: Cargo.toml
kolibri-swift/rust/src/: lib.rs
