[package]
name = "kolibri-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for the Komet messaging protocol (kolibri-net)"
license = "MIT OR Apache-2.0"

[lib]
name = "kolibri"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py39"] }
kolibri-net = { path = "../kolibri-net" }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
rmpv = "1"
serde_json = "1"
