[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kolibri-py"
version = "0.1.0"
description = "Python bindings for the Komet messaging protocol"
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
requires-python = ">=3.9"
keywords = ["komet", "messaging", "protocol"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.urls]
Repository = "https://github.com/KometTeam/kolibri"
Issues = "https://github.com/KometTeam/kolibri/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
