[package]
name = "kolibri_dart"
version = "0.1.0"
edition = "2021"
description = "Dart/Flutter bindings for the Kolibri messaging protocol (via flutter_rust_bridge)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
kolibri-net = { path = "../../kolibri-net" }
tokio = { version = "1", features = ["rt-multi-thread"] }
rmpv = "1"
serde_json = "1"

[workspace]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "unwind"
